k8s/immich/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: immich
spec:
  selector:
    matchLabels:
      app: immich
  replicas: 1
  template:
    metadata:
      labels:
        app: immich
    spec:
      nodeSelector:
        machine: beacon
      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-server:release
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0
          ports: 
            - containerPort: 2283
          volumeMounts:
            - name: immich-library-data
              mountPath: /usr/src/app/upload
        - name: postgres
          image: pgvector/pgvector:pg16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: immich-db-data
              mountPath: /var/lib/postgresql
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
      volumes:
        - name: immich-library-data
          persistentVolumeClaim:
            claimName: immich-library-data
        - name: immich-db-data
          persistentVolumeClaim:
            claimName: immich-db-data
