k8s/immich/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-svc
  namespace: immich
  labels:
    app: immich
spec:
  selector:
    app: immich
  type: NodePort
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283
